Introduce Producer and ProducerBuffer framework